Consolidate CORS to one source; gate Swagger off in prod profile
- Removed the duplicate WebMvc CorsConfig and all 29 @CrossOrigin controller annotations; CORS is now defined only by SecurityConfig.corsConfigurationSource(), with the allowed origin externalized via app.cors.allowed-origins (env CORS_ALLOWED_ORIGINS, default http://localhost:3000).
- Added application-prod.properties disabling springdoc api-docs + swagger-ui under the prod profile (stays enabled in dev).
Verified: tests 18/0/0; app boots with no CORS-bean conflict; preflight from localhost:3000 returns Access-Control-Allow-Origin + Allow-Credentials; login 200.